@@ -1,3 +1,14 @@
+2011-07-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* misc/plugutils.c (mark_successful_plugin, proto_post_wrapped,
+	get_plugin_preference):
+	Replace use of plug_*() by direct call of nvti_*() where
+	nvti elements are concerned.
+
+	* nasl/nasl_scanner_glue.c (script_timeout, script_version):
+	Replace use of plug_*() by direct call of nvti_*() where
+	nvti elements are concerned.
+
 2011-07-01  Henri Doreau <henri.doreau@greenbone.net>
 
 	* nasl/nasl_builtin_nmap.c: Minor coding style fixes.
